# olmOCR-RAG

./: .gitignore  RAG_Pipeline.ipynb  README.md  README_file.md  Using LangChain 1.0.ipynb  main.py  pyproject.toml
output/: work_index_list.csv.zstd
output/results/: output_56ed288052f1e24618c52559e31340dbc2924624.jsonl  output_f331f2c551e3fd1e8adbca6382a22f4cfa21f66e.jsonl
