[project]
name = "olmocr-rag"
version = "0.1.0"
description = "RAG pipeline for D&D documents using LangChain 1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flashinfer-python",
    "olmocr[gpu]>=0.1.58",
    "langchain>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=0.3.4",
    "langchain-qdrant>=0.2.0",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.0",
    "img2pdf>=0.6.3",
]

[tool.uv.sources]
flashinfer-python = { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.5%2Bcu128torch2.7-cp38-abi3-linux_x86_64.whl" }
